[project]
name = "agent-stock-predictor-dependencies"
version = "0.1.0"
description = "A dependency mangement system for all neccesary library versions to be used in the project"
authors = [
    {name = "Henry Rothenberg",email = "hsr205@aol.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "yfinance (>=1.1.0,<2.0.0)",
    "zlibrary (>=1.0.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
